samples/_failures_safe/1761540188_7b12ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0627ae25.c: In function ‘main’:
./samples/SAFE/__tmp_0627ae25.c:152:9: error: expected ‘{’ at end of input
  152 |         struct
      |         ^~~~~~
./samples/SAFE/__tmp_0627ae25.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0627ae25.c:152:9: error: expected declaration or statement at end of input
